Work Experience & Education spacing on a smartphone fix

--- a/app/src/assets/main.scss
+++ b/app/src/assets/main.scss
@@ -162,11 +162,28 @@ b {
 
 .c-info {
     display: flex;
-    flex-direction: column;
+    margin-top: 1rem;
+    padding: 0rem 0.25rem;
     justify-content: space-between;
-    justify-content: center;
     align-items: center;
-    text-align: center;
+    background-color: hsla(0, 0, 0, 0.25);
+    border-radius: 50px;
+
+    .c-info-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    button {
+        height: 2rem;
+        width: 2rem;
+    }
+
+    p {
+        font-size: 15px;
+    }
 }
 
 @media (min-width: 400px) {
